二回目のコミット

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <p>(写真は加工されています。なお実物)</p>
                     <h1>15才</h1>
                     <h1>N高校1年生</h1>
+                    <h1>カメラ・ゲーム</h1>
 
                 </div>
             </div>
