--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="introduction">
             <div class="yoko">
-                <img src="img/tenkaimoru.jpg" alt="" width=300px>
+                <img src="img/tenkaimoru.JPG" alt="" width=300px>
                 <div>
                     <h1>中村 天海(てん)</h1>
                     <p>(写真は加工されています。なお実物)</p>
