--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <header>
         <img src="img/tenkai0.png" alt="" />
-
     </header>
     <main>
         <div class="introduction">
@@ -25,45 +24,42 @@
                     <h1>15才</h1>
                     <h1>N高校1年生</h1>
                     <h1>カメラ・ゲーム</h1>
-
                 </div>
             </div>
         </div>
-        <div class="skill">
-            <div class="skills">
-                <h1>Skills</h1>
-                <div class="tab_wrap">
-                    <input id="tab1" type="radio" name="tab_btn" checked>
-                    <input id="tab2" type="radio" name="tab_btn">
-                    <input id="tab3" type="radio" name="tab_btn">
-                    <input id="tab4" type="radio" name="tab_btn">
+        <div class="skills">
+            <h1>Skills</h1>
+            <div class="tab_wrap">
+                <input id="tab1" type="radio" name="tab_btn" checked>
+                <input id="tab2" type="radio" name="tab_btn">
+                <input id="tab3" type="radio" name="tab_btn">
+                <input id="tab4" type="radio" name="tab_btn">
 
-                    <div class="tab_area">
-                        <label class="tab1_label" for="tab1">AfterEffects</label>
-                        <label class="tab2_label" for="tab2">PremierPro</label>
-                        <label class="tab3_label" for="tab3">HTMLCSS</label>
-                        <label class="tab4_label" for="tab4">Swift</label>
+                <div class="tab_area">
+                    <label class="tab1_label" for="tab1">AfterEffects</label>
+                    <label class="tab2_label" for="tab2">PremierPro</label>
+                    <label class="tab3_label" for="tab3">HTMLCSS</label>
+                    <label class="tab4_label" for="tab4">Swift</label>
+                </div>
+                <div class="panel_area">
+                    <div id="panel1" class="tab_panel">
+                        <img src="img/1200px-Adobe_After_Effects_CC_icon.svg.png" alt="" width=250px>
+                        <h2>中学2年生のクリスマスから使っている<br>僕の生命線で主に映像作品を作る時に使っている。 <br>それ以外も結構多用する</h2>
                     </div>
-                    <div class="panel_area">
-                        <div id="panel1" class="tab_panel">
-                            <img src="img/1200px-Adobe_After_Effects_CC_icon.svg.png" alt="" width=250px>
-                            <h2>中学2年生のクリスマスから使っている<br>僕の生命線で主に映像作品を作る時に使っている。 <br>それ以外も結構多用する</h2>
+                    <div id="panel2" class="tab_panel">
+                        <img src="img/pr.png">
+                        <h2>中学3年生の春から使っている<br>MAD作品やネタ動画を作るときなどに重宝する <br>ささっと編集できるので便利</h2>
+                    </div>
+                    <div id="panel3" class="tab_panel">
+                        <div class="imgsmoll">
+                            <img src="img/html.png" alt="">
+                            <img src="img/css.png" alt="">
                         </div>
-                        <div id="panel2" class="tab_panel">
-                            <img src="img/pr.png" alt="" width=250px>
-                            <h2>中学3年生の春から使っている<br>MAD作品やネタ動画を作るときなどに重宝する <br>ささっと編集できるので便利</h2>
-                        </div>
-                        <div id="panel3" class="tab_panel">
-                            <div class="img">
-                                <img src="img/HTML.png" alt="" width=250px>
-                                <img src="img/CSS.ong.jpg" alt="" width=250px>
-                            </div>
-                            <h2>高校1年生の春から使っている<br>エディターはVSCode、まだポートフォリオでしか使っていない<br>いつか立派なサイトを作る</h2>
-                        </div>
-                        <div id="panel4" class="tab_panel">
-                            <img src="img/Swift.jpeg" alt="" width=250px>
-                            <h2>高校1年生の9月から勉強中<br>まだ作品はないけどこの先たくさんのアプリをリリースする</h2>
-                        </div>
+                        <h2>高校1年生の春から使っている<br>エディターはVSCode、まだポートフォリオでしか使っていない<br>いつか立派なサイトを作る</h2>
+                    </div>
+                    <div id="panel4" class="tab_panel">
+                        <img src="img/Swift.jpeg" alt="">
+                        <h2>高校1年生の9月から勉強中<br>まだ作品はないけどこの先たくさんのアプリをリリースする</h2>
                     </div>
                 </div>
             </div>
@@ -73,13 +69,9 @@
             <div class="rise">
                 <h1>Rise</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/jXtc-7SBn-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <h3>LifeisTech!の2019年の春キャンプで作ったものを修正したものです。<br>素材は音源と背景の海のみです。
-                </h3>
-
+                <h3>LifeisTech!の2019年の春キャンプで作ったものを修正したものです。<br>素材は音源と背景の海のみです。</h3>
             </div>
-            <h2>著作権の都合上、掲載できませんが　<br> 他にもMAD動画や再現動画など様々な映像作品を作ってます。
-            </h2>
-        </div>
+            <h2>著作権の都合上、掲載できませんが<br>他にもMAD動画や再現動画など様々な映像作品を作ってます。</h2>
         </div>
     </main>
     <footer>
