--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:300&display=swap" rel="stylesheet" />
-    <title>Portfolio</title>
+    <title>てんのぽーとふぉりお</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <main>
         <div class="introduction">
             <div class="yoko">
-                <img src="img/tenkaimoru.jpg" alt="" width=300px>
+                <img src="img/tenkaimoru.jpg" alt="" width="300px" />
                 <div>
                     <h1>中村 天海(てん)</h1>
                     <p>(写真は加工されています。なお実物)</p>
@@ -30,11 +30,10 @@
         <div class="skills">
             <h1>Skills</h1>
             <div class="tab_wrap">
-                <input id="tab1" type="radio" name="tab_btn" checked>
-                <input id="tab2" type="radio" name="tab_btn">
-                <input id="tab3" type="radio" name="tab_btn">
-                <input id="tab4" type="radio" name="tab_btn">
-
+                <input id="tab1" type="radio" name="tab_btn" checked />
+                <input id="tab2" type="radio" name="tab_btn" />
+                <input id="tab3" type="radio" name="tab_btn" />
+                <input id="tab4" type="radio" name="tab_btn" />
                 <div class="tab_area">
                     <label class="tab1_label" for="tab1">AfterEffects</label>
                     <label class="tab2_label" for="tab2">PremierPro</label>
@@ -43,23 +42,33 @@
                 </div>
                 <div class="panel_area">
                     <div id="panel1" class="tab_panel">
-                        <img src="img/1200px-Adobe_After_Effects_CC_icon.svg.png" alt="" width=250px>
-                        <h2>中学2年生のクリスマスから使っている<br>僕の生命線で主に映像作品を作る時に使っている。 <br>それ以外も結構多用する</h2>
+                        <img src="img/1200px-Adobe_After_Effects_CC_icon.svg.png" alt="" width="250px" />
+                        <h2>
+                            中学2年生のクリスマスから使っている<br />僕の生命線で主に映像作品を作る時に使っている。
+                            <br />それ以外も結構多用する
+                        </h2>
                     </div>
                     <div id="panel2" class="tab_panel">
-                        <img src="img/pr.png">
-                        <h2>中学3年生の春から使っている<br>MAD作品やネタ動画を作るときなどに重宝する <br>ささっと編集できるので便利</h2>
+                        <img src="img/pr.png" />
+                        <h2>
+                            中学3年生の春から使っている<br />MAD作品やネタ動画を作るときなどに重宝する
+                            <br />ささっと編集できるので便利
+                        </h2>
                     </div>
                     <div id="panel3" class="tab_panel">
                         <div class="imgsmoll">
-                            <img src="img/html.png" alt="">
-                            <img src="img/css.png" alt="">
+                            <img src="img/html.png" alt="" />
+                            <img src="img/css.png" alt="" />
                         </div>
-                        <h2>高校1年生の春から使っている<br>エディターはVSCode、まだポートフォリオでしか使っていない<br>いつか立派なサイトを作る</h2>
+                        <h2>
+                            高校1年生の春から使っている<br />エディターはVSCode、まだポートフォリオでしか使っていない<br />いつか立派なサイトを作る
+                        </h2>
                     </div>
                     <div id="panel4" class="tab_panel">
-                        <img src="img/Swift.jpeg" alt="">
-                        <h2>高校1年生の9月から勉強中<br>まだ作品はないけどこの先たくさんのアプリをリリースする</h2>
+                        <img src="img/Swift.jpeg" alt="" />
+                        <h2>
+                            高校1年生の9月から勉強中<br />まだ作品はないけどこの先たくさんのアプリをリリースする
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -69,9 +78,13 @@
             <div class="rise">
                 <h1>Rise</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/jXtc-7SBn-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <h3>LifeisTech!の2019年の春キャンプで作ったものを修正したものです。<br>素材は音源と背景の海のみです。</h3>
+                <h3>
+                    LifeisTech!の2019年の春キャンプで作ったものを修正したものです。<br />素材は音源と背景の海のみです。
+                </h3>
             </div>
-            <h2>著作権の都合上、掲載できませんが<br>他にもMAD動画や再現動画など様々な映像作品を作ってます。</h2>
+            <h2>
+                著作権の都合上、掲載できませんが<br />他にもMAD動画や再現動画など様々な映像作品を作ってます。
+            </h2>
         </div>
     </main>
     <footer>
