--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div id="panel3" class="tab_panel">
                         <div class="imgsmoll">
-                            <img src="img/html.png" alt="" />
+                            <img src="img/HTML.png" alt="" />
                             <img src="img/css.png" alt="" />
                         </div>
                         <h2>
