--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
     <main>
         <div class="introduction">
             <div class="yoko">
-<<<<<<< HEAD
-                <img src="img/tenkaimoru.jpg" alt="" width="300px" />
-=======
-                <img src="img/tenkaimoru.JPG" alt="" width=300px>
->>>>>>> origin/master
+                <img src="img/tenkaimoru.JPG" alt="" width="300px" />
                 <div>
                     <h1>中村 天海(てん)</h1>
                     <p>(写真は加工されています。なお実物)</p>
@@ -46,7 +42,7 @@
                 </div>
                 <div class="panel_area">
                     <div id="panel1" class="tab_panel">
-                        <img src="img/1200px-Adobe_After_Effects_CC_icon.svg.png" alt="" width="250px" />
+                        <img src="ae.png" alt="" width="250px" />
                         <h2>
                             中学2年生のクリスマスから使っている<br />僕の生命線で主に映像作品を作る時に使っている。
                             <br />それ以外も結構多用する
