--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="panel_area">
                     <div id="panel1" class="tab_panel">
-                        <img src="aftereffects.png" />
+                        <img src="img/aftereffects.png" />
                         <h2>
                             中学2年生のクリスマスから使っている<br />僕の生命線で主に映像作品を作る時に使っている。
                             <br />それ以外も結構多用する
