--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <div class="introduction">
             <div class="yoko">
-                <img src="img/tenkaimoru.JPG" alt="" width="300px" />
+                <img src="img/tenkaimoru.JPG" alt="" width="450px" />
                 <div>
                     <h1>中村 天海(てん)</h1>
                     <p>(写真は加工されています。なお実物)</p>
@@ -77,7 +77,7 @@
             <h1>Work</h1>
             <div class="rise">
                 <h1>Rise</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jXtc-7SBn-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe height="315" src="https://www.youtube.com/embed/jXtc-7SBn-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h3>
                     LifeisTech!の2019年の春キャンプで作ったものを修正したものです。<br />素材は音源と背景の海のみです。
                 </h3>
